--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,1 +1,3 @@
-<p>products works!</p>
+<div class="content">
+    <app-card *ngFor="let product of arrayProducts" [content]="product"></app-card>
+</div>
