--- a/src/app/templates/menu/menu.component.html
+++ b/src/app/templates/menu/menu.component.html
@@ -2,10 +2,10 @@
     <nav>
         <div class="logo">Logo</div>
         <ul>
-            <li>Produtos</li>
-            <li>Login</li>
+            <li routerLink="produtos"> Produtos</li>
+            <li routerLink="login" (click)="login()">Login</li>
             <li>Cadastro</li>
             <li>Contato</li>
         </ul>
     </nav>
-</header>    
+</header>
