--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,3 +1,1 @@
-<div class="content">
-    <app-card *ngFor="let product of arrayProducts" [content]="product"></app-card>
-</div>
+<router-outlet></router-outlet>
